# nexus_os

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEV_JOURNAL.md  LICENSE  MVP_TRACKING.md  README.md  ROADMAP.md
.github/: DEV_JOURNAL.md.resolved  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
nexus_boot/: Cargo.toml
nexus_boot/src/: main.rs
nexus_kernel/: Cargo.toml
nexus_kernel/.cargo/: config.toml
nexus_kernel/src/: allocator.rs  interrupts.rs  logger.rs  main.rs  memory.rs  vga_buffer.rs
nexus_kernel/src/cortex/: mod.rs
nexus_kernel/src/task/: keyboard.rs  mod.rs  simple_executor.rs
